src/test/ui/issues/issue-48364.stderr
error[E0308]: mismatched types
  --> $DIR/issue-48364.rs:2:21
   |
LL |     b"".starts_with(stringify!(foo))
   |                     ^^^^^^^^^^^^^^^ expected slice, found str
   |
   = note: expected type `&[u8]`
              found type `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
